--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>springcloud-eureka-feign-mybatis-seata-v100</name>
 	<description>Demo project for Spring Boot</description>
 
+	<packaging>pom</packaging>
+
 	<modules>
 		<module>order_server</module>
 		<module>account_server</module>
