--- a/storage_server/src/main/resources/application.yml
+++ b/storage_server/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 eureka:
     instance:
-        hostname: 192.168.168.168
+        hostname: 192.168.173.95
         prefer-ip-address: true
     client:
         serviceUrl:
@@ -15,8 +15,8 @@ spring:
         name: storage-server
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://116.xx.xx.xx/seata-storage
-        password: xxxxxx
+        url: jdbc:mysql://116.62.62.26/seata-storage
+        password: 14789632
         username: root
     cloud:
         alibaba:
