--- a/order_server/src/main/resources/application.yml
+++ b/order_server/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
 # 完整配置项参考：https://github.com/seata/seata/blob/1.1.0/script/client/spring/application.yml
 seata:
     enabled: true
-    application-id: applicationName
-    tx-service-group: default
+    application-id: order-server
+    tx-service-group: default # default是事务分组名称，可自定义
     enable-auto-data-source-proxy: true
     use-jdk-proxy: false
     client:
@@ -53,7 +53,7 @@ seata:
             exceptionRate: 100
     service:
         vgroup-mapping:
-            default: fsp_tx # defaul是事务分组名称，fsp_tx是tc集群名称
+            default: fsp_tx # default是事务分组名称，可自定义；fsp_tx是tc集群名称
         grouplist:
             default: 127.0.0.1:8091
         enable-degrade: false
