--- a/storage_server/pom.xml
+++ b/storage_server/pom.xml
@@ -30,18 +30,30 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>2.2.2.RELEASE</version>
 		</dependency>
 		<!--feign-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>2.2.2.RELEASE</version>
 		</dependency>
-
+		<!--		https://www.cnblogs.com/spec-dog/p/12217166.html-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-loadbalancer</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
 		<!--seata-->
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-seata</artifactId>
-			<version>2.2.0.RELEASE</version>
+			<version>2.2.1.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.seata</groupId>
@@ -52,17 +64,28 @@
 		<dependency>
 			<groupId>io.seata</groupId>
 			<artifactId>seata-spring-boot-starter</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0</version>
 		</dependency>
 	</dependencies>
 
+	<!--	<dependencyManagement>-->
+	<!--		<dependencies>-->
+	<!--			&lt;!&ndash;Spring Cloud&ndash;&gt;-->
+	<!--			<dependency>-->
+	<!--				<groupId>org.springframework.cloud</groupId>-->
+	<!--				<artifactId>spring-cloud-dependencies</artifactId>-->
+	<!--				<version>${spring-cloud.version}</version>-->
+	<!--				<type>pom</type>-->
+	<!--				<scope>import</scope>-->
+	<!--			</dependency>-->
+	<!--		</dependencies>-->
+	<!--	</dependencyManagement>-->
 	<dependencyManagement>
 		<dependencies>
-			<!--Spring Cloud-->
 			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
+				<groupId>com.alibaba.cloud</groupId>
+				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
+				<version>2.2.0.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
